Ajout de l'historisque et annotations

--- a/apropos.html
+++ b/apropos.html
@@ -16,7 +16,7 @@
                 <a href="/" class="nav-link">Accueil</a>
                 <a href="dashboard.html" class="nav-link">Dashboard</a>
                 <a href="apropos.html" class="nav-link">À propos</a>
-                <a href="#" class="nav-link">Resources</a>
+                <a href="/historique" class="nav-link">Historique</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </nav>
         </div>
