GreenIT et modification header

--- a/dashboard.html
+++ b/dashboard.html
@@ -547,5 +547,6 @@
             setupEventListeners();
         });
     </script>
+    <script src="static/js/header-effects.js"></script>
 </body>
 </html>
