visuels supplémentaires et modif style

--- a/apropos.html
+++ b/apropos.html
@@ -15,7 +15,7 @@
             <nav class="nav">
                 <a href="/" class="nav-link">Accueil</a>
                 <a href="dashboard.html" class="nav-link">Dashboard</a>
-                <a href="apropos.html" class="nav-link">À propos</a>
+                <a href="apropos.html" class="nav-link active">À propos</a>
                 <a href="/historique" class="nav-link">Historique</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </nav>
