--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                 <a href="dashboard.html" class="nav-link">Dashboard</a>
                 <a href="apropos.html" class="nav-link">À propos</a>
                 <a href="/historique" class="nav-link">Historique</a>
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="contact.html" class="nav-link active">Contact</a>
             </nav>
         </div>
     </header>
